<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="0dp"
            android:id="@+id/secondLayout">

            <TextView
                android:text="@string/dialog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView7"
                android:padding="15dp" />

            <TextView
                android:text="@string/dialog_City"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_below="@+id/textView7"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:padding="15dp"
                android:layout_alignRight="@+id/textView7"
                android:layout_alignEnd="@+id/textView7" />

            <TextView
                android:text="@string/dialog_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView11"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/textView12"
                android:padding="15dp"
                android:layout_alignRight="@+id/textView9"
                android:layout_alignEnd="@+id/textView9" />

            <TextView
                android:text="@string/dialog_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:padding="15dp"
                android:layout_below="@+id/textView10"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/textView22"
                android:layout_alignRight="@+id/textView13"
                android:layout_alignEnd="@+id/textView13"
                android:layout_toLeftOf="@+id/textView22" />

            <TextView
                android:text="@string/dialog_cloudnes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:padding="15dp"
                android:layout_below="@+id/textView9"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/textView14"
                android:layout_alignEnd="@+id/textView14" />

            <TextView
                android:text="@string/dialog_win_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView14"
                android:padding="15dp"
                android:layout_below="@+id/textView13"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="@string/dialog_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:padding="15dp"
                android:layout_below="@+id/textView8"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView19"
                android:padding="15dp"
                android:gravity="center"
                android:layout_alignBottom="@+id/textView7"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView11"
                android:layout_alignRight="@+id/textView20"
                android:layout_alignEnd="@+id/textView20" />

            <TextView
                android:text="@string/dialog_pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:padding="15dp"
                android:layout_below="@+id/textView12"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/textView24"
                android:layout_toLeftOf="@+id/textView24" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView20"
                android:gravity="center"
                android:layout_above="@+id/textView11"
                android:layout_below="@+id/textView7"
                android:layout_toRightOf="@+id/textView11"
                android:layout_alignRight="@+id/textView21"
                android:layout_alignEnd="@+id/textView21" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView20"
                android:id="@+id/textView21"
                android:gravity="center"
                android:padding="15dp"
                android:layout_above="@+id/textView12"
                android:layout_toRightOf="@+id/textView11"
                android:layout_toLeftOf="@+id/iconWeather" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView10"
                android:id="@+id/textView24"
                android:gravity="center"
                android:layout_above="@+id/textView13"
                android:layout_alignRight="@+id/textView23"
                android:layout_alignEnd="@+id/textView23"
                android:layout_alignLeft="@+id/textView23"
                android:layout_alignStart="@+id/textView23" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:gravity="center"
                android:layout_below="@+id/textView24"
                android:layout_above="@+id/textView14"
                android:layout_alignRight="@+id/textView24"
                android:layout_alignEnd="@+id/textView24"
                android:layout_alignLeft="@+id/textView24"
                android:layout_alignStart="@+id/textView24" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView26"
                android:gravity="center"
                android:padding="15dp"
                android:layout_below="@+id/textView25"
                android:layout_alignLeft="@+id/textView25"
                android:layout_alignStart="@+id/textView25"
                android:layout_alignRight="@+id/textView25"
                android:layout_alignEnd="@+id/textView25" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView23"
                android:gravity="center"
                android:padding="15dp"
                android:layout_above="@+id/textView9"
                android:layout_below="@+id/textView12"
                android:layout_alignLeft="@+id/textView21"
                android:layout_alignStart="@+id/textView21"
                android:layout_toLeftOf="@+id/iconWeather"
                android:layout_toStartOf="@+id/iconWeather" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView22"
                android:gravity="center|right"

                android:layout_below="@+id/textView21"
                android:layout_centerHorizontal="true"
                android:layout_above="@+id/textView23" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:gravity="center"
                android:layout_alignBottom="@+id/textView22"
                android:layout_toRightOf="@+id/textView22"
                android:layout_toEndOf="@+id/textView22"
                android:layout_below="@+id/textView21" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/iconWeather"
                android:adjustViewBounds="true"
                android:layout_below="@+id/textView21"
                android:layout_toRightOf="@+id/textView"
                android:layout_toEndOf="@+id/textView" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>